# GP2040-CE-Mayflash-S5

./: GITHUB_SETUP.md  MAYFLASH_S5_MODIFICATIONS.md  QUICK_START.txt  README_SETUP.txt  START_HERE.txt  setup-git.bat  setup-git.ps1
.github/workflows/: cmake.yml  node.js.yml
headers/: usbhostmanager.h
headers/drivers/ps4/: PS4Descriptors.h
lib/PicoPeripherals/: CMakeLists.txt  peripheral_usb.h
src/: usbhostmanager.cpp
